5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1674_1099.log
== TEST (2019-04-25 10:35:43) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a=b and b=c):
			print("equilatero")
		elif((a=b or b=c or a=c) and(a!=b or b!=c or c!=a)):
			print("isoceles")
			else:
				print("escaleno")
	else:
		print("Area: invalida")
else:
	print("Area: invalida")

-- ERROR:
File "XXXX", line 12
    if(a=b and b=c):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:36:13) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		
		if(a==b and b==c):
			print("equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("isoceles")
			else:
				print("escaleno")
	else:
		print("Area: invalida")
else:
	print("Area: invalida")

-- ERROR:
File "XXXX", line 17
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:36:25) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		
		if(a==b and b==c):
			print("equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("isoceles")
		else:
				print("escaleno")
	else:
		print("Area: invalida")
else:
	print("Area: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:36:34) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		
		if(a==b and b==c):
			print("equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("isoceles")
		else:
				print("escaleno")
	else:
		print("Area: invalida")
else:
	print("Area: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:36:40) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		
		if(a==b and b==c):
			print("equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("isoceles")
		else:
				print("escaleno")
	else:
		print("Area: invalida")
else:
	print("Area: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:36:49) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		
		if(a==b and b==c):
			print("equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("isoceles")
		else:
				print("escaleno")
	else:
		print("Area: invalida")
else:
	print("Area: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:37:53) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:37:59) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:38:03) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- EXECUTION TIME:
0.183813
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo : invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:21) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:51) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:00) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:06) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:15) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:21) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:55) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isoceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isoceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:41:51) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isosceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalida")

-- EXECUTION TIME:
0.166953
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo : invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:42:28) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: isosceles")
		else:
				print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalido")

-- EXECUTION TIME:
0.179928
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo : invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:43:34) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: Equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: Isosceles")
		else:
				print("Tipo de triangulo: Escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalido")

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: Isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:43:40) 
-- CODE:
from math import*

# Leitura dos lados do triangulo a, b, and c
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
 
if (a>0 and b>0 and c>0):
	if (a+b > c and c+b >a and c+a > b):
		if(a==b and b==c):
			print("Tipo de triangulo: Equilatero")
		elif((a==b or b==c or a==c) and(a!=b or b!=c or c!=a)):
			print("Tipo de triangulo: Isosceles")
		else:
				print("Tipo de triangulo: Escaleno")
	else:
		print("Tipo de triangulo : invalido")
else:
	print("Tipo de triangulo: invalido")

-- EXECUTION TIME:
0.232531
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: Isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: Escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo : invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:50:02) 
-- CODE:
from math import*
a = float(input("Lado a:"))
b = float(input("Lado b"))
c = float(input("Lado c"))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:50:18) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:50:24) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:50:27) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:50:32) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.163377
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: isosceles
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:23) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:28) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:40) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:53:46) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:53:52) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:53:57) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:54:30) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif ((a == b or b == c or c == a) and (a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- ERROR:
File "XXXX", line 13
    elif ((a == b or b == c or c == a) and (a != c or b != a or c != b):
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:54:43) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a == b or b == c or c == a and a != c or b != a or c != b):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:32) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a==b or b==c and a!=b or b!=c):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:37) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif (a==b or b==c and a!=b or b!=c):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:54) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif ((a==b or b==c) and (a!=b or b!=c)):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:58:00) 
-- CODE:
from math import*
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entradas:", a, ",", b, ",", c)

if(a < 0 or b < 0 or c < 0):
	print("Tipo de triangulo: invalido")
elif(a + b > c  and c + b > a  and a + c > b):
	if(a == b and b == c):
		print("Tipo de triangulo: equilatero")
	elif ((a==b or b==c) and (a!=b or b!=c)):
		print("Tipo de triangulo: isosceles")
	else:
		print("Tipo de triangulo: escaleno")
	
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.200523
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
